--- a/css/styles.css
+++ b/css/styles.css
@@ -134,6 +134,12 @@ ol {
   align-items: center;
 }
 
+.contacts-icon {
+  display: block;
+  margin-right: 10px;
+  fill: currentColor;
+}
+
 .contacts-item:not(:last-child) {
   margin-right: 50px;
 }
@@ -142,7 +148,9 @@ ol {
   margin-left: auto;
 }
 
-.contacts .link {
+.contacts-link {
+  display: flex;
+  align-items: center;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -150,16 +158,23 @@ ol {
   color: var(--primary-text-color);
 }
 
-.contacts .link:hover,
-.contacts .link:focus {
+.contacts-link:hover,
+.contacts-link:focus {
   color: var(--accent-color);
 }
 
 /*-------------Hero-------------*/
 .hero {
+  background-color: var(--accent-background-color);
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: var(--accent-background-color);
+  height: 600px;
+  max-width: 1600px;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .hero-title {
