--- a/css/styles.css
+++ b/css/styles.css
@@ -175,6 +175,7 @@ ol {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  margin: 0 auto;
 }
 
 .hero-title {
@@ -215,6 +216,18 @@ ol {
 .benefits-list {
   display: flex;
   align-items: center;
+}
+
+.box-icon {
+  width: 270px;
+  height: 120px;
+  background-color: var(--secondary-accent-background-color);
+  border-radius: 4px;
+  padding: 25px 100px;
+  margin-bottom: 30px;
+}
+
+.benefits-icon {
 }
 
 .benefits-item:not(:last-child) {
