--- a/css/styles.css
+++ b/css/styles.css
@@ -251,7 +251,8 @@ ol {
 /*--------Чем мы занимаемся--------*/
 
 .services-title,
-.team-title {
+.team-title,
+.clients-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
@@ -340,6 +341,37 @@ ol {
 
 .social-icon {
   fill: currentColor;
+}
+/*------------Clients-----------*/
+
+.clients-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.clients-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 170px;
+  height: 92px;
+  border: 1px solid var(--social-icon-color);
+  border-radius: 4px;
+  color: var(--social-icon-color);
+}
+
+.clients-link:hover,
+.clients-link:focus {
+  border: 1px solid var(--accent-color);
+  color: var(--accent-color);
+}
+.clients-icon {
+  fill: currentColor;
+}
+
+.clients-item:not(:last-child) {
+  margin-right: 30px;
 }
 /*------------Footer---------*/
 
