--- a/css/styles.css
+++ b/css/styles.css
@@ -499,6 +499,8 @@ ol {
 .projects-button:focus {
   color: var(--secondary-background-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .example-list {
@@ -507,6 +509,16 @@ ol {
   margin-left: -30px;
   margin-bottom: -30px;
   background-color: var(--secondary-background-color);
+}
+
+.example-link {
+  display: block;
+}
+
+.example-link:hover,
+.example-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .example-item {
