--- a/css/styles.css
+++ b/css/styles.css
@@ -220,12 +220,14 @@ ol {
 }
 
 .box-icon {
-  width: 270px;
+  width: 100%;
   height: 120px;
   background-color: var(--secondary-accent-background-color);
   border-radius: 4px;
-  padding: 25px 100px;
   margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .benefits-item:not(:last-child) {
